@@ -1,5 +1,7 @@
 30.11.2013 git
 - added $keep_private option to serve deltasql via https:// and to hide everything if user is not logged in.
+- updated FAQ on exposing deltasql to the Internet
+- fixed some missing <?php session_start(); ?> on several pages
 
 *******************************
 1.6.4 Release Notes (4.10.2013)
